# UniwerytetZielonogorski

./: .gitignore  README.md
Arduino/lcd/: lcd.ino
Arduino/lcd_address/: lcd_address.ino
Arduino/led_potencjometr/: led_potencjometr.ino
Arduino/single_7seg/: schemat.txt  single_7seg.ino
GrafikaKomputerowa/: README.md
GrafikaKomputerowa/Lab1/: cw1.max  lab1.xcf  levels.xcf  project.max  zamek.max
GrafikaKomputerowa/Lab_01/: lab1.max  zamek.max
GrafikaKomputerowa/Lab_03/: lab03zad03.max
GrafikaKomputerowa/Lab_04/: lab04zad01.max
GrafikaKomputerowa/Lab_05/: lab5.7z
Java/: Java.rar  README.md
Java/Lab_07/: dane.csv  dane.txt
Java/Lab_10/: logs.txt
Java/Lab_12A/: pom.xml
Java/TestJavaFX/: pom.xml
Java/TestJavaFX2/: pom.xml
JezykiSkryptowe/: README.md
PO/lab1/: CMakeLists.txt  zad03.cpp  zad04.cpp  zad05.cpp  zad06.cpp  zad07.cpp  zad08.cpp  zad09.cpp  zad1.cpp  zad19.cpp  zad2.cpp
PO/lab2/: CMakeLists.txt  zad1.cpp
PO_lab1/: zad14.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad9.cpp
ProgramowanieObiekotowe/: README.md
ProgramowanieObiekotowe/konstruktory/: CMakeLists.txt  konstruktorKopiujacy.cpp  konstruktorKopiujacy2.cpp
ProgramowanieObiekotowe/operatory/: CMakeLists.txt  Notatki  (+10 more)
Semestr_1/: README.md
Semestr_2/: README.md
Semestr_3/: README.md
Semestr_4/: README.md
SystemyOperacyjne/: README.md
UkladyCyfrowe/: gates.odt
lab1/: CMakeLists.txt  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad19.cpp  zad2.cpp  zad3.cpp  zad5.cpp  zad6.cpp
lab2/: CMakeLists.txt  zad2.cpp
tmp/: 19.txt  21.txt  22.txt
(+671 files in other folders)
