cmake_minimum_required(VERSION 3.27)
project(lab1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab1
        #zad2.cpp
        #zad3.cpp
        #zad4.cpp
        #zad5.cpp
        #zad6.cpp
        #zad7.cpp
        #zad8.cpp
        #zad9.cpp
        #zad10.cpp
        #zad11.cpp
        #zad12.cpp
        #zad13.cpp
        #zad14.cpp
        #zad15.cpp
        #zad16.cpp
        #zad17.cpp
        #zad18.cpp
        #zad19.cpp
)
