cmake_minimum_required(VERSION 3.27)
project(lab1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab1
        #zad01.cpp
        #zad02.cpp
        #zad03.cpp
        #zad04.cpp
        #zad05.cpp
        #zad06.cpp
        #zad07.cpp
        #zad08.cpp
        #zad09.cpp
        #zad10.cpp
        #zad11.cpp
        #zad12.cpp
        #zad13.cpp
        #zad14.cpp
        #zad15.cpp
        #zad16.cpp
        #zad17.cpp
        #zad18.cpp
        zad19.cpp
        )
